# JSONTOMYCOMMAND

./: README.md  main.py  pyproject.toml  start.sh
JSON/: kitsimported (1).json  kitsimported.json
