[tool.poetry]
name = "jsontomycommand"
version = "0.1.0"
description = "This Script was Designed so that you could transfer a JSON file into copyable YAML that you can transfer into the My Command Plugin"
authors = ["Cole F <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
